# tauri-plugin-android-fs

./: .gitignore  .my-memo.md  CHANGES.md  Cargo.toml  LICENSE-APACHE.txt  README.md  build.rs
android/: build.gradle.kts
android/src/main/java/: AFFileDescriptor.kt  AFJSObject.kt  AFMediaStore.kt  AFNotification.kt  AFStorageVolume.kt  AFThumbnails.kt  AFUtils.kt  AndroidFsPlugin.kt  DocumentFileController.kt  FileController.kt  MediaFileController.kt  RawFileController.kt
api/: LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md  package.json
api/guest-js/: index.ts
permissions/: all-without-delete.toml  all.toml  default.toml  scope.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: check_persisted_uri_permission.toml  create_dir_all.toml  get_thumbnail_base64.toml  get_thumbnail_data_url.toml  get_volumes.toml  has_public_files_permission.toml  persist_uri_permission.toml  release_all_persisted_uri_permissions.toml  release_persisted_uri_permission.toml
permissions/schemas/: schema.json
src/: error.rs  lib.rs  main.rs  models.rs  utils.rs
src/api/: android_fs.rs  app_storage.rs  file_opener.rs  file_picker.rs  file_sender.rs  mod.rs  private_storage.rs  progress_notification_guard.rs  public_storage.rs  temp_file_guard.rs  utils.rs  writable_stream.rs
src/api/impls/: ext.rs  mod.rs  raw.rs  writable_stream.rs
src/api/models/: image.rs
src/cmds/: cmd_move_entry.rs  cmd_rename.rs  mod.rs  scope.rs  state.rs  utils.rs
src/config/: mod.rs
src/consts/: api_level.rs
src/models/: dir.rs  entry.rs  error.rs  file_access.rs  file_uri.rs  image.rs  mod.rs  notification.rs  storage_volume.rs
src/protocols/: mod.rs  protocol_content.rs  protocol_thumbnail.rs  state.rs
src/utils/: async_sleep.rs  mod.rs
