[package]
name = "tauri-plugin-android-fs"
version = "15.1.1"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-android-fs"
exclude = [
    "target",
    "android/.gradle/",
    "android/local.properties",
    "android/.idea",
    "android/gradle",
    "android/gradlew",
    "android/gradlew.bat",
]
build = "build.rs"
license = "MIT OR Apache-2.0"
keywords = ["tauri", "android", "file", "fs", "dialog"]
authors = ["OkaYu"]
description = "Android file system API for Tauri."
repository = "https://github.com/aiueo13/tauri-plugin-android-fs"
readme = "README.md"

[package.metadata.platforms.support]
android = { level = "full", notes = "" }
windows = { level = "none", notes = "" }
linux = { level = "none", notes = "" }
macos = { level = "none", notes = "" }
ios = { level = "none", notes = "" }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = "2"
tauri-plugin-fs = "2"

[target.'cfg(target_os = "android")'.dependencies]
percent-encoding = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }