[package]
name = "tauri-plugin-android-fs"
version = "24.2.1"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-android-fs"
exclude = [
    "target",
    "android/.gradle/",
    "android/local.properties",
    "android/.idea",
    "android/gradle",
    "android/gradlew",
    "android/gradlew.bat",
    ".check_all_features.sh",
    ".my-memo.md"
]
build = "build.rs"
license = "MIT OR Apache-2.0"
keywords = ["tauri", "android", "file", "fs", "dialog"]
authors = ["OkaYu"]
description = "Android file system API for Tauri."
repository = "https://github.com/aiueo13/tauri-plugin-android-fs"
readme = "README.md"

[package.metadata.platforms.support]
android = { level = "full", notes = "" }
windows = { level = "none", notes = "" }
linux = { level = "none", notes = "" }
macos = { level = "none", notes = "" }
ios = { level = "none", notes = "" }

[features]
default = []
legacy_storage_permission = []
legacy_storage_permission_include_android_10 = []

[dependencies]
tauri = { version = "^2.8.2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = "2"
tauri-plugin-fs = "2"
sync_async = "0.1.0"
schemars = "0.8"
glob = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
percent-encoding = "2"
base64 = "0.22.1"

[build-dependencies]
tauri-plugin = { version = "^2.4", features = ["build"] }
schemars = "0.8"
serde = "1"